--- a/src/assets/stylesheets/colorset/index.styl
+++ b/src/assets/stylesheets/colorset/index.styl
@@ -18,19 +18,19 @@
 
 // 1.主要色彩 //////////////////////////////////////////////////////////////////////////////////////////////////////////
 // 1.品牌色 ------------------------------------------------------------------------------------------------------------
-$primary            = #fa8c16     // 即 orange60
+$primary            = #1890ff     // 即 orange60
 
 // 2.品牌色混白色色阶 ---------------------------------------------------------------------------------------------------
 
-$primary10 = #FFF4E8    // 混色    white : $theme_primary    =    9 : 1
-$primary20 = #FEE8D0    // 混色    white : $theme_primary    =    8 : 2
-$primary30 = #FEDDB9    // 混色    white : $theme_primary    =    7 : 3
-$primary40 = #FDD1A2    // 混色    white : $theme_primary    =    6 : 4
-$primary50 = #FDC68B    // 混色    white : $theme_primary    =    5 : 5
-$primary60 = #FCBA73    // 混色    white : $theme_primary    =    4 : 6
-$primary70 = #FCAF5C    // 混色    white : $theme_primary    =    3 : 7
-$primary80 = #FBA345    // 混色    white : $theme_primary    =    2 : 8
-$primary90 = #FB982D    // 混色    white : $theme_primary    =    1 : 9
+$primary10 = #e8f4ff    // 混色    white : $theme_primary    =    9 : 1
+$primary20 = #d1e9ff    // 混色    white : $theme_primary    =    8 : 2
+$primary30 = #badeff    // 混色    white : $theme_primary    =    7 : 3
+$primary40 = #a3d3ff    // 混色    white : $theme_primary    =    6 : 4
+$primary50 = #8cc8ff    // 混色    white : $theme_primary    =    5 : 5
+$primary60 = #74bcff    // 混色    white : $theme_primary    =    4 : 6
+$primary70 = #5db1ff    // 混色    white : $theme_primary    =    3 : 7
+$primary80 = #46a6ff    // 混色    white : $theme_primary    =    2 : 8
+$primary90 = #2f9bff    // 混色    white : $theme_primary    =    1 : 9
 
 // 2.功能色 ------------------------------------------------------------------------------------------------------------
 $sense_success      = #52c41a     //    成功 - 绿。即 green60
