--- a/src/assets/stylesheets/element-plus-customized/index.scss
+++ b/src/assets/stylesheets/element-plus-customized/index.scss
@@ -1,7 +1,7 @@
 @forward "element-plus/theme-chalk/src/common/var.scss" with (
   $colors: (
     "primary": (
-      "base": #fa8c16,    // =$primary
+      "base": #1890ff,    // =$primary
     ),
     'success': (
       'base': #52c41a,    // =$green60
