--- a/src/assets/stylesheets/patterns/buttonlike.styl
+++ b/src/assets/stylesheets/patterns/buttonlike.styl
@@ -1,8 +1,8 @@
 $pattern$buttonlike =
-    // &:hover
-    //     background-color $shadow10
+    &:hover
+        background-color $shadow05
 
     &:active
-        background-color $shadow05
+        background-color $shadow10
 
 // @todo 使用一个四方张成的 z=-1 的 before 伪元素来作为点击反馈阴影蒙层。这样可以不破坏元素本身属性。
